apps/lab/gitlab/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    link.argocd.argoproj.io/external-link: https://code.lab.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - code.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-public
  namespace: gitlab
  annotations:
    link.argocd.argoproj.io/external-link: https://code.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - code.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
