apps/lab/gitlab/templates/registry-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - registry.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitlab-registry
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry-public
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - registry.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: gitlab-registry
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
