apps/lab/gitlab/templates/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  parentRefs:
    - name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: ssh-alt
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 2222
